syntax = "proto3";

package mempoolspace;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.tbk.bitcoin.tool.fee.mempoolspace.proto";
option java_outer_classname = "MempoolspaceProtos";
option java_multiple_files = true;

/**
 * Recommended Fees
 * Returns our currently suggested fees for new transactions.
 * https://mempool.space/api/v1/fees/recommended
 *
 * For example:
 * {
 *   "fastestFee": 127,
 *   "halfHourFee": 115,
 *   "hourFee": 107
 * }
 */
message FeesRecommended {
    int64 fastest_fee = 1 [json_name = "fastestFee"];
    int64 half_hour_fee = 2 [json_name = "halfHourFee"];
    int64 hour_fee = 3 [json_name = "hourFee"];
}

/**
 * Mempool Blocks
 * Returns current mempool as projected blocks.
 * https://mempool.space/api/v1/fees/mempool-blocks
 *
 * For example:
 * [
 *   {
 *     "blockSize": 1207756,
 *     "blockVSize": 999797,
 *     "nTx": 3150,
 *     "totalFees": 126662975,
 *     "medianFee": 120.13947368421053,
 *     "feeRange": [
 *       107,
 *       109.70526315789473,
 *       117.52,
 *       123.40178571428571,
 *       138.89583333333334,
 *       1535.6771300448431
 *     ]
 *   },
 *  [...]
 * ]
 *
 * Caution: This response cannot be represented by protobuf as message. You must
 *          parse it as `struct` and then create a FeeEstimates message with it.
 */
message ProjectedMempoolBlocks {
    message ProjectedBlock {
        int64 block_size = 1 [json_name = "blockSize"];
        int64 block_vsize = 2 [json_name = "blockVSize"];
        int64 n_tx = 3 [json_name = "nTx"];
        int64 total_fees = 4 [json_name = "totalFees"];
        double median_fee = 5 [json_name = "medianFee"];
        repeated double fee_range = 6 [json_name = "feeRange"];
    }
    repeated ProjectedBlock blocks = 1;
}
